crates/aranya-policy-compiler/tests/data/functions/return_type_enum_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | function f() enum Blah {
  |                   ^^^^ enum `Blah` not defined
